2008-10-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c providerDrv.c
		Fixed [ 2192049 ] Potential memory leak in providerDrv.c 
			:forkProvider() (patch from Klaus Kämpf)

2008-10-29 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* sfcBroker.c
		Fixed [ 2185304 ] SFCB doesn't shut down properly a good 
		portion of the time. 

2008-10-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c
		Fixed [ 2193250 ] No data in http request causes segfault.

2008-10-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am control.c sfcb.cfg.pre.in
	Fixed [2158091] sfcb modules belong in private dir

2008-10-17 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* httpAdapter.c
	Corrected data type for maxLen (See [ 2172888 ])

2008-10-17 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/xmltest.sh removed test/xmltest/*.OK 
		added test/xmltest/*.lines
	Fixed [2175401] xml tests too verbose

2008-10-17 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* msgqueue.c
	Fixed [ 2175507 ] sockaddr_un not allocated for localconnect server

2008-10-17 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* indCIMXMLExport.c
	Fixed [ 2175426 ] possible int overflow

2008-10-16 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* control.c, httpAdapter.c
	Fixed [ 2172888 ] http content-length is not constrained

2008-10-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c mlog.c msgqueue.c providerDrv.c providerMgr.c
	Fixed [2172023] mlogf call cleanups

2008-10-15 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* sqlLexer.l
	Fixed [2169607] sqlLexer assumes line lengths under MAXBUF

2008-10-15 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlParser.c:
	Fixed [ 2169527 ] Some XML parsing error strings do not have sufficient
	space

	* objectImpl.h:
	Fixed [ 2168834 ] sfcbmof unaligned access when installing sblim-sfcb
	(Fix found by Bart Whitely)
	
2008-10-15 Sean Swehla <smswehla@linux.vnet.ibm.com>
